7/13/10 #2421, update URLs that changed with move to wicket-based website
7/13/10 #2436, consolidate all URLs and email addresses in TUConstants
7/13/10 fix contractions (eg "don't") in HTML strings that weren't rendering correctly 
5/28/10 adhoc logging replaced with log4j by JO
4/1/10 changed "Brazilian Portuguese" to "Portuguese, Brazil" to be consistent with website (see #2250)
# 2.08.00 (39581) Apr 1, 2010
4/1/10 added locale "es_CO" for "Spanish, Colombia" (see #2244)
# 2.07.00 (39060) Mar 3, 2010
3/3/10 deprecate locale "no", it's the same as "nb" (see #2146)
# 2.06.00 (37959) Jan 8, 2010
1/8/10 fixes for languages that use preferred font + preferred font for Georgian
# 2.05.02 (37958) Jan 8, 2010
1/8/10 fix: use preferred font for target text areas, broken in eariler changes
# 2.05.01 (37909) Jan 5, 2010
1/5/10 #1891, add preferred fonts for Georgian (ka)
1/5/09 #2083, display font face names below the language names at the top of each column
# 2.05.00 (37895) Jan 5, 2010
1/5/10 #2075, change custom locale for Friulian from "fu_IT" to "fu"
# 2.04.00 (37830) Dec 30, 2009
12/30/09 #2075, add custom locale for "Friulian, Italy"
# 2.03.00 (36202) Oct 29, 2009
10/29/09 new production version with many enhancements and fixes
# 2.02.03 (35607) Oct 8, 2009
10/8/09 new icons for preview and error buttons
# 2.02.02 (35572) Oct 7, 2009
10/7/09 dev version to verify changes and new features
10/1/09 #1627, HTML preview feature
9/29/09 #110,1794,1795, fix scrolling issues in main scroll pane
9/29/09 #1799, file chooser filters for Save/Load feature
9/28/09 #1798, toolbar enhancements (tooltips, order, spacing)
9/28/09 #97, check for unsaved changes
9/25/09 #1794, limit displayed key name length to 40 chars, show ellipsis in middle for longer keys
9/25/09 #110, prevent unwanted scroll pane autoscrolling by deleting listener in MainFrame
9/25/09 #1629, validate MessageFormat and HTML translations, user-interface for accessing validation error details